--- a/cog-paper.tex
+++ b/cog-paper.tex
@@ -172,13 +172,24 @@ Although mildly useful, Wait unit-actions can also have a devastating effect on 
 
 The presence of one Wait unit-action in a player-action (thus, IPA) is enough to introduce a risk of encountering one of the disadvantageous situations, and the more Wait unit-actions in an IPA, the higher this risk gets. Thus, we believe that pruning all IPAs from the search space, while preserving some IPAs as a safety measure, to account for trapped units and tactical waiting, can be beneficial to MCTS. This way, exploration is steered away from a type of detrimental actions.
 
-Out of place, Wait unit-action assignments, can exhibit a similar effect to noise, since they could distract sampling-based search approaches away from more interesting options. 
+%Out of place, Wait unit-action assignments, can exhibit a similar effect to noise, and sampling-based search approaches can be distracted away from more interesting options.
 
 \subsection{Pruning Techniques}
 
-The radical pruning approach would be to remove all IPAs from the search space, basically removing the Wait unit-action from the set of unit-actions of all unit types. Thus, diminishing $m$ by $1$, and obtaining a branching factor $b' = (m - 1)^n$, which constitutes a considerable decline from $b$. As an example, if we have $m=5$ unit-actions on average, in a given game state with $n=6$ units, then $b \approx 1.56\times10^4$ and $b' \approx 4\times10^3$. The total number of IPAs removed would be : $v = b - b' = 1.16\times10^4$. However, our intention is to keep a portion of IPAs, to deal with trapped units and tactical waiting, and remove the rest.
+The radical pruning approach would be to remove all IPAs from the search space, basically removing the Wait unit-action from the set of unit-actions of all unit types. Thus, diminishing $m$ by $1$, and obtaining a branching factor $b' = (m - 1)^n$, which constitutes a considerable decline from $b$. As an example, if we have $m=5$ unit-actions on average, in a given game state with $n=6$ units, then $b \approx 1.56\times10^4$ and $b' \approx 4\times10^3$. The total number of IPAs removed would be : $v = b - b' = 1.16\times10^4$. The reduction is significant, but, our intention is to keep a portion of IPAs, to deal with trapped units and tactical waiting, and remove the rest.
 
-Detecting trapped units is a straightforward process (allow Wait unit-action if no other action is possible). But, dealing with tactical waiting can be elusive, since there is no way to differentiate between waiting as a tactical choice, and waiting as a bad decision, until witnessing the consequences. Random playouts do not offer an accurate answer about the quality of the decision. Consequently, we propose four pruning approaches that detect IPAs and decide whether to allow or prune them following a parameter.
+Detecting trapped units is a straightforward process. But, dealing with tactical waiting can be elusive, since there is no simple way to differentiate between waiting as a tactical choice, and waiting as a bad decision, until witnessing the consequences. Random playouts do not offer an accurate answer about the quality of the decision. Consequently, we propose four pruning approaches that detect IPAs and decide whether to allow or prune them following a parameter. These approaches preserve all IPAs involving trapped units, and allow a predetermined amount of random IPAs, in hopes of preserving tactical waiting situations. The remaining IPAs are all considered disadvantageous and are systematically hard-pruned (no re-insertion). We describe our pruning approaches as follows :
+
+\begin{itemize}
+\item \textbf{Random Inactivity Pruning - Fixed (RIP-F):} Allow a fixed amount, $n$, of IPAs.
+\item \textbf{Random Inactivity Pruning - Relative (RIP-R):} Allow a percentage of IPAs, $p$, relative to the total number of removable IPAs.
+\item \textbf{Dynamic RIP-F (DRIP-F):} Allow $n_1$ IPAs when the units count outnumber the opponent's units count, and $n_2$ IPAs in the opposite situation.
+\item \textbf{Dynamic RIP-R (DRIP-R):} Allow $p_1$ percent of IPAs when the units count outnumber the opponent's units count, and $p_2$ percent of IPAs in the opposite situation.
+\end{itemize}
+
+The intuition behind dynamic approaches is to equalize the chances of performing tactical waiting, when the agent does not hold a numerical advantage. This is done by allowing more IPAs when the agent is outnumbered ($n_2 > n_1$ or, $p_2 > p_1$).
+
+These pruning approaches can be easily implemented and adapted to any search algorithm. They operate by capturing player-actions while sampling, and checking whether an IPA was captured or not. In case of an IPA involving a trapped unit, it is allowed, if not, a parameter check decides whether to prune the IPA or allow it. If pruned, the search algorithm needs to sample another action.
 
 \section{Experimentation Results}
 
