--- a/cog-paper.tex
+++ b/cog-paper.tex
@@ -178,7 +178,7 @@ The presence of one Wait unit-action in a player-action (thus, IPA) is enough to
 
 The radical pruning approach would be to remove all IPAs from the search space, basically removing the Wait unit-action from the set of unit-actions of all unit types. Thus, diminishing $m$ by $1$, and obtaining a branching factor $b' = (m - 1)^n$, which constitutes a considerable decline from $b$. As an example, if we have $m=5$ unit-actions on average, in a given game state with $n=6$ units, then $b \approx 1.56\times10^4$ and $b' \approx 4\times10^3$. The total number of IPAs removed would be : $v = b - b' = 1.16\times10^4$. The reduction is significant, but, our intention is to keep a portion of IPAs, to deal with trapped units and tactical waiting, and remove the rest.
 
-Detecting trapped units is a straightforward process. But, dealing with tactical waiting can be elusive, since there is no simple way to differentiate between waiting as a tactical choice, and waiting as a bad decision, until witnessing the consequences. Random playouts do not offer an accurate answer about the quality of the decision. Consequently, we propose four pruning approaches that detect IPAs and decide whether to allow or prune them following a parameter. These approaches preserve all IPAs involving trapped units, and allow a predetermined amount of random IPAs, in hopes of preserving tactical waiting situations. The remaining IPAs are all considered disadvantageous and are systematically hard-pruned (no re-insertion). We describe our pruning approaches as follows :
+Detecting trapped units is a straightforward process. But, dealing with tactical waiting can be elusive, since there is no simple way to differentiate between waiting as a tactical choice, and waiting as a bad decision, until witnessing the consequences. Random playouts do not offer an accurate answer about the quality of the decision. Consequently, we propose four pruning approaches that detect IPAs and decide whether to allow or prune them according to a given parameter. These approaches preserve all IPAs involving trapped units, and allow a predetermined amount of random IPAs, in hopes of preserving tactical waiting situations. The remaining IPAs are all considered disadvantageous and are systematically hard-pruned (no re-insertion). We describe our pruning approaches as follows :
 
 \begin{itemize}
 \item \textbf{Random Inactivity Pruning - Fixed (RIP-F):} Allow a fixed amount, $n$, of IPAs.
@@ -189,11 +189,14 @@ Detecting trapped units is a straightforward process. But, dealing with tactical
 
 The intuition behind dynamic approaches is to equalize the chances of performing tactical waiting, when the agent does not hold a numerical advantage. This is done by allowing more IPAs when the agent is outnumbered ($n_2 > n_1$ or, $p_2 > p_1$).
 
-These pruning approaches can be easily implemented and adapted to any search algorithm. They operate by capturing player-actions while sampling, and checking whether an IPA was captured or not. In case of an IPA involving a trapped unit, it is allowed, if not, a parameter check decides whether to prune the IPA or allow it. If pruned, the search algorithm needs to sample another action.
+These pruning approaches can be easily implemented and adapted to any search algorithm. They operate by capturing player-actions while sampling, and checking whether an IPA was captured or not. In case the IPA does not involve a trapped unit, a parameter check decides whether to prune the IPA or allow it. If pruned, the search algorithm needs to sample another action, while keeping track of the pruned IPAs. In the next section, we report the experimentations conducted and the results obtained by enhancing UCT and NaïveMCTS, with these pruning approaches, in the context of RTS games.
 
-\section{Experimentation Results}
+\section{Experimentation and Results}
 
-\subsection{Parameter Tuning}
+To study the effect of pruning IPAs on MCTS, we chose to implement the four aforementioned techniques using UCT and NaïveMCTS, as the base search algorithms, and conduct experiments in \mRTS{}. It is true that UCT's performance suffers greatly in RTS scenarios, due to the combinatorial search space, nevertheless, we would like to see if pruning IPAs would alleviate this dimensionality burden. 
+
+
+\subsection{Parameter Analysis}
 
 % WIP
 
